name:                ghcjs-test
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/ghcjs-test#readme
license:             BSD3
--license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
--extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base
                     , ghcjs-base
                     , ghcjs-dom
                     , reflex-dom
                     , time
                     , mtl
                     , transformers
                     , lens
                     , objective
                     , ghcjs-jquery
                     , containers
                     , shakespeare
                     , blaze-html
                     , text
                     , keycode
                     , stm
                     , these
                     , reflex
  default-language:    Haskell2010

executable ghcjs-test-exe
  hs-source-dirs:      app/
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ghcjs-test
  default-language:    Haskell2010

test-suite ghcjs-test-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ghcjs-test
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/ghcjs-test
